k8s/manifests/chatbot/chatbot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatbot-deployment
  namespace: app
  labels:
    app: chatbot
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chatbot
  template:
    metadata:
      labels:
        app: chatbot
    spec:
      serviceAccountName: chatbot-service-account
      containers:
      - name: chatbot
        image: 'public.ecr.aws/c6w3t1p6/aicloudops-chatbot:latest'
        stdin: true
        tty: true
        ports:
        - containerPort: 7681
        resources:
          requests:
            memory: 64Mi
            cpu: 250m
          limits:
            memory: 128Mi
            cpu: 500m
        volumeMounts:
        - name: code-files
          mountPath: /tmp
      volumes:
      - name: code-files
        persistentVolumeClaim:
          claimName: ai-code-pvc
