k8s/manifests/chatbot/chatbot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatbot-service
  namespace: app
  labels:
    app: chatbot
spec:
  ports:
  - port: 7681 # service port
    targetPort: 7681 # container port 
    protocol: TCP
    name: http
  selector:
    app: chatbot
